Mask modifier followed by hair particles causes crash on render (cycles) #41122

Closed
opened 2014-07-18 23:11:27 +02:00 by bassam kurdali · 16 comments
Member

System Information
GNU Linux 64 bit - fedora 20/ Intel CPU / nvidia GPU

Blender Version
Broken: 0e324b1
Worked: 2.70a

Short description of error

On the selected mesh is a mask modifier that hides the entire mesh, follwed by a particle system,
On Render, you get lots of the following message:
NO CD_ORIGSPACE, error out of range
Followed by a segfault
In 2.70 you get the same error, but no crash

Exact steps for others to reproduce the error

  • Download the file testcrash.blend
  • Open it in git master
  • press render
  • Crash!
  • try again, this time disable one of the two modifiers
  • No crash
**System Information** GNU Linux 64 bit - fedora 20/ Intel CPU / nvidia GPU **Blender Version** Broken: 0e324b1 Worked: 2.70a **Short description of error** On the selected mesh is a mask modifier that hides the entire mesh, follwed by a particle system, On Render, you get lots of the following message: ` NO CD_ORIGSPACE, error out of range` Followed by a segfault In 2.70 you get the same error, but no crash **Exact steps for others to reproduce the error** - Download the file [testcrash.blend](https://archive.blender.org/developer/F98455/testcrash.blend) - Open it in git master - press render - Crash! - try again, this time disable one of the two modifiers - No crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

I'm getting:

	NO CD_ORIGSPACE, error out of range
BLI_assert failed: /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:695, DM_get_tessface_data(), at 'index >= 0 && index < dm->getNumTessFaces(dm)'

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffccff9700 (LWP 10715)]

0x00000000025ea9a4 in psys_interpolate_uvs (tface=0x0, quad=0, w=0x7dad598,

    uvco=0x7fffccff4bd0)
    at /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/particle.c:1549

1549 float v10 = tface->uv- [x][0];

I'm getting: ``` NO CD_ORIGSPACE, error out of range BLI_assert failed: /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:695, DM_get_tessface_data(), at 'index >= 0 && index < dm->getNumTessFaces(dm)' Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffccff9700 (LWP 10715)] ``` 0x00000000025ea9a4 in psys_interpolate_uvs (tface=0x0, quad=0, w=0x7dad598, ``` uvco=0x7fffccff4bd0) at /home/kevin/src/blender-git/blender/source/blender/blenkernel/intern/particle.c:1549 ``` 1549 float v10 = tface->uv- [x][0];

Added subscriber: @zeauro

Added subscriber: @zeauro

Well, it is a crash but not annoying for usability.
It is known that modifiers messing up geometry are affecting particles stability.

Use Modifier Stack option does not seem to work for this modifier.

There is no crash with mask modifier after particles.
Particles have its own renderability properties to avoid to render emitter or particles.
Material textures can be used instead of vertex groups to manage their visibility.

Well, it is a crash but not annoying for usability. It is known that modifiers messing up geometry are affecting particles stability. Use Modifier Stack option does not seem to work for this modifier. There is no crash with mask modifier after particles. Particles have its own renderability properties to avoid to render emitter or particles. Material textures can be used instead of vertex groups to manage their visibility.
Author
Member

doesn't work shouldn't mean crash! crash is not an acceptible way for program to behave.

and it does affect usability, sorry to say. complex workarounds (need two meshes, one with mask, one with particles, animated at the same time) are just that: workarounds.

doesn't work shouldn't mean crash! crash is not an acceptible way for program to behave. and it does affect usability, sorry to say. complex workarounds (need two meshes, one with mask, one with particles, animated at the same time) are just that: workarounds.

Added subscriber: @mont29

Added subscriber: @mont29

Should not crash, in any case…

There seems to be two different issues here - the error message about missing CD_ORIGSPACE only happens when mask modifier removes all geometry.

The crash however happens whether there is geometry or not, and seems specific to Cycles.

Should not crash, in any case… There seems to be two different issues here - the error message about missing CD_ORIGSPACE only happens when mask modifier removes **all** geometry. The crash however happens whether there is geometry or not, and seems specific to Cycles.

Not adding Cycles, since I suspect it’s in fact in RNA that crash happens.

Not adding Cycles, since I suspect it’s in fact in RNA that crash happens.
Bastien Montagne self-assigned this 2014-07-19 16:59:16 +02:00

I agree that a crash is an issue
No, you don't need two mesh.
You want to hide emitter : just uncheck emitter option particle system properties.
You want to hide hairs : just uncheck Cycles hair checkbox.

I am not talking about workarounds. I am just reminding what is perfectly obvious in particle properties but that every user ignores.
THE DAMNED RENDER PANEL !

You want a masking through an animated texture. Use same animated texture in both materials.

I forgot that you can also put your vertex group in Vertex Groups panel to control length of particles. length=0 means invisible particles.

You are not supposed to use mask modifier for that at all, in current particle system design.
It never worked perfectly.
Mask modifier is known to not be useable in several cases like sculpt mode since years too.
There are problems with modifiers and particles since years.

I am just realistic. Particles new system is expected since years, now.
But what you want to achieve is doable, now by respecting old system concepts.

I agree that a crash is an issue No, you don't need two mesh. You want to hide emitter : just uncheck emitter option particle system properties. You want to hide hairs : just uncheck Cycles hair checkbox. I am not talking about workarounds. I am just reminding what is perfectly obvious in particle properties but that every user ignores. THE DAMNED RENDER PANEL ! You want a masking through an animated texture. Use same animated texture in both materials. I forgot that you can also put your vertex group in Vertex Groups panel to control length of particles. length=0 means invisible particles. You are not supposed to use mask modifier for that at all, in current particle system design. It never worked perfectly. Mask modifier is known to not be useable in several cases like sculpt mode since years too. There are problems with modifiers and particles since years. I am just realistic. Particles new system is expected since years, now. But what you want to achieve is doable, now by respecting old system concepts.

Previous blend solved by using vertex groups panel.
solution.blend

Previous blend solved by using vertex groups panel. [solution.blend](https://archive.blender.org/developer/F98544/solution.blend)
Author
Member

right. It doesn't work. That is a problem. Not ideal,but also not something to defend - future designs of particles will eliminate such problems as is already being coded. I've already worked around this in my files.

Also: Not what I am reporting here, aka, not the bug The bug is the crash. period. end of story. Blender shouldn't crash because some buttons were pressed. This becomes incredibly hard to debug in a big project with lots of artists (which is where this file is from)

Thanks for the solution though; I appreciate you trying to help. Just please tone down the rhetoric. You're doing a good job confirming the bugs and helping, thanks.

right. It doesn't work. That is a problem. Not ideal,but also not something to defend - future designs of particles will eliminate such problems as is already being coded. I've already worked around this in my files. Also: **Not what I am reporting here, aka, not the bug** The bug is the crash. period. end of story. Blender shouldn't crash because some buttons were pressed. This becomes incredibly hard to debug in a big project with lots of artists (which is where this file is from) Thanks for the solution though; I appreciate you trying to help. Just please tone down the rhetoric. You're doing a good job confirming the bugs and helping, thanks.

This issue was referenced by 3ca78a40e8

This issue was referenced by 3ca78a40e8b9eb7fa7c01404590ca2592a0b390d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3ca78a40e8.

Closed by commit 3ca78a40e8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41122
No description provided.